# alert-notification-service

./: .env.example  .gitignore  BENCHMARKS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  config.py  db.py  errors.py  main.py  redis_client.py
app/audit/: __init__.py  models.py  router.py  service.py
app/auth/: __init__.py  dependencies.py
app/channels/: __init__.py  base.py  circuit.py  classification.py  policy.py  registry.py  rendering.py  secrets.py
app/dispatcher/: __init__.py  worker.py
app/dlq/: __init__.py  router.py  schemas.py  service.py
app/ingestion/: __init__.py  dedup.py  janitor.py  models.py  router.py  schemas.py  service.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/queue/: __init__.py  priority_queue.py  rate_limit.py  retry_queue.py
app/recipients/: __init__.py  cache.py  matching.py  models.py  pagination.py  rate_limit_policy.py  router.py  schemas.py  service.py  snapshot.py
docs/: 00-overview-and-architecture.md  01-alert-ingestion-api.md  02-severity-based-priority-queue.md  03-recipient-and-subscription-management.md  DELIVERABLES.md
infra/helm/: README.md
infra/terraform/: README.md
tests/: conftest.py
tests/contract/: .gitkeep  test_channel_contract.py  test_ingestion_contract.py  test_rate_limit_policy_contract.py  test_recipients_contract.py
tests/integration/: .gitkeep  conftest.py  test_circuit_breaker_redis.py  test_dedup_redis.py  test_dlq_redis.py  test_priority_queue_redis.py  test_rate_limit_redis.py  (+3 more)
(+34 files in other folders)
